--- a/Software/Charting/.classpath
+++ b/Software/Charting/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/sp-hid.jar"/>
 	<classpathentry kind="lib" path="lib/sp-tty.jar"/>
 	<classpathentry kind="lib" path="lib/sp-core.jar"/>
+	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
