--- a/Software/Charting/.classpath
+++ b/Software/Charting/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="lib/sp-tty.jar"/>
 	<classpathentry kind="lib" path="lib/sp-core.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
