--- a/Software/Charting/.classpath
+++ b/Software/Charting/.classpath
@@ -7,7 +7,12 @@
 	<classpathentry kind="lib" path="lib/sp-hid.jar"/>
 	<classpathentry kind="lib" path="lib/sp-tty.jar"/>
 	<classpathentry kind="lib" path="lib/sp-core.jar"/>
-	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
-	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jSerialComm-1.3.11.jar"/>
+	<classpathentry kind="lib" path="lib/sp-usb.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.0.19-swt.jar"/>
+	<classpathentry kind="lib" path="lib/jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/miglayout-src.zip"/>
+	<classpathentry kind="lib" path="lib/miglayout15-swing.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
