--- a/Software/SMT_Oven_RTOS/Sources/RTX_Conf_CM.cfg
+++ b/Software/SMT_Oven_RTOS/Sources/RTX_Conf_CM.cfg
@@ -1,7 +1,7 @@
 /*----------------------------------------------------------------------------
  *      CMSIS-RTOS  -  RTX
  *----------------------------------------------------------------------------
- *      Name:    RTX_Conf_CM.C
+ *      Name:    RTX_Conf_CM.H
  *      Purpose: Configuration of CMSIS RTX Kernel for Cortex-M
  *      Rev.:    V4.70.1
  *----------------------------------------------------------------------------
@@ -30,6 +30,8 @@
  * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
  * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
+ * 
+ * Based on RTX_Conf_CM.c
  *---------------------------------------------------------------------------*/
 
 #include "cmsis_os.h"
@@ -44,22 +46,24 @@
 // <h>Thread Configuration
 // =======================
 //
-//   <o>Number of concurrent running user threads <1-250>
-//   <i> Defines max. number of user threads that will run at the same time.
+//   <o>Number of concurrent running threads <1-250>
+//   <i> Defines max. number of threads that will run at the same time.
+//   <i> One thread is reserved for use as an idle thread
+//   <i> One thread is reserved for use as main thread i.e. main()
 //   <i> Default: 6
 #ifndef OS_TASKCNT
  #define OS_TASKCNT     2
 #endif
 
 //   <o>Default Thread stack size [bytes] <64-4096:8><#/4>
-//   <i> Defines default stack size for threads with osThreadDef stacksz = 0
+//   <i> Defines default stack size for threads with stacksz = 0
 //   <i> Default: 200
 #ifndef OS_STKSIZE
  #define OS_STKSIZE     436     // this stack size value is in words
 #endif
 
 //   <o>Main Thread stack size [bytes] <64-32768:8><#/4>
-//   <i> Defines stack size for main thread.
+//   <i> Defines stack size for main thread = main().
 //   <i> Default: 200
 #ifndef OS_MAINSTKSIZE
  #define OS_MAINSTKSIZE 438     // this stack size value is in words
@@ -212,110 +216,3 @@
  *      RTX User configuration part END
  *---------------------------------------------------------------------------*/
 
-#define OS_TRV          ((uint32_t)(((double)OS_CLOCK*(double)OS_TICK)/1E6)-1)
-
-
-/*----------------------------------------------------------------------------
- *      Global Functions
- *---------------------------------------------------------------------------*/
-
-/*--------------------------- os_idle_demon ---------------------------------*/
-
-/// \brief The idle demon is running when no other thread is ready to run
-void os_idle_demon (void) {
-
-  for (;;) {
-    /* HERE: include optional user code to be executed when no thread runs.*/
-     __asm__("wfi");
-  }
-}
-
-#if (OS_SYSTICK == 0)   // Functions for alternative timer as RTX kernel timer
-
-/*--------------------------- os_tick_init ----------------------------------*/
-
-/// \brief Initializes an alternative hardware timer as RTX kernel timer
-/// \return                             IRQ number of the alternative hardware timer
-int os_tick_init (void) {
-  return (-1);  /* Return IRQ number of timer (0..239) */
-}
-
-/*--------------------------- os_tick_val -----------------------------------*/
-
-/// \brief Get alternative hardware timer's current value (0 .. OS_TRV)
-/// \return                             Current value of the alternative hardware timer
-uint32_t os_tick_val (void) {
-  return (0);
-}
-
-/*--------------------------- os_tick_ovf -----------------------------------*/
-
-/// \brief Get alternative hardware timer's  overflow flag
-/// \return                             Overflow flag\n
-///                                     - 1 : overflow
-///                                     - 0 : no overflow
-uint32_t os_tick_ovf (void) {
-  return (0);
-}
-
-/*--------------------------- os_tick_irqack --------------------------------*/
-
-/// \brief Acknowledge alternative hardware timer interrupt
-void os_tick_irqack (void) {
-  /* ... */
-}
-
-#endif   // (OS_SYSTICK == 0)
-
-/*--------------------------- os_error --------------------------------------*/
-
-/* OS Error Codes */
-#define OS_ERROR_STACK_OVF      1
-#define OS_ERROR_FIFO_OVF       2
-#define OS_ERROR_MBX_OVF        3
-#define OS_ERROR_TIMER_OVF      4
-
-extern osThreadId svcThreadGetId (void) __attribute__ ((unused));
-
-/// \brief Called when a runtime error is detected
-/// \param[in]   error_code   actual error code that has been detected
-void os_error (uint32_t error_code) {
-
-   osThreadId err_task = svcThreadGetId();
-   (void)err_task;
-
-  /* HERE: include optional code to be executed on runtime error. */
-  switch (error_code) {
-    case OS_ERROR_STACK_OVF:
-      /* Stack overflow detected for the currently running task. */
-      /* Thread can be identified by calling svcThreadGetId().   */
-      __asm__("bkpt #0");
-      break;
-    case OS_ERROR_FIFO_OVF:
-      /* ISR FIFO Queue buffer overflow detected. */
-      __asm__("bkpt #0");
-      break;
-    case OS_ERROR_MBX_OVF:
-      /* Mailbox overflow detected. */
-      __asm__("bkpt #0");
-      break;
-    case OS_ERROR_TIMER_OVF:
-      /* User Timer Callback Queue overflow detected. */
-      __asm__("bkpt #0");
-      break;
-    default:
-      break;
-  }
-  for (;;);
-}
-
-
-/*----------------------------------------------------------------------------
- *      RTX Configuration Functions
- *---------------------------------------------------------------------------*/
-
-#include "RTX_CM_lib.h"
-
-/*----------------------------------------------------------------------------
- * end of file
- *---------------------------------------------------------------------------*/
